@@ -1,0 +1,4 @@
+module.exports = function(el, className) {
+	if ((' ' + el.className + ' ').match(' ' + className + ' ')) { return }
+	el.className += ' ' + className
+}
